2005-09-15  Mark Mitchell  <mark@codesourcery.com>

	* testsuite/testsuite_character.h: Specialize character<>
	templates in __gnu_cxx, not in __gnu_test.

2005-09-13  Jonathan Wakely  <cow@compsoc.man.ac.uk>
	    Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/21674
	* testsuite/21_strings/basic_string/element_access/char/21674.cc: New.
	* testsuite/21_strings/basic_string/element_access/wchar_t/21674.cc: 
	New.

2005-09-12  David Edelsohn  <dje@gcc.gnu.org>

	PR libstdc++/22554
	PR libstdc++/23734
	* include/Makefile.am (stamp-assoc): Install each subgroup
	of headers separately.
	* include/Makefile.in: Regenerate.
	
2005-09-12  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/ext/mt_allocator/22309_thread.cc: Remove dg-do run.
	* testsuite/lib/libstdc++.exp ( proc libstdc++_init): Enable
	shared only for linux.
	
2005-09-12  Benjamin Kosnik  <bkoz@redhat.com>
	    David Edelsohn  <dje@gcc.gnu.org>

	PR libstdc++/22554
	PR libstdc++/23734
	* include/Makefile.am (assoc_headers): Break into five sub values.
	(install-headers): Use them.
	(stamp-assoc): Same.
	* include/Makefile.in: Regenerate.
	
2005-09-12  Chris Jefferson  <chris@bubblescope.net>

	* include/bits/stl_algo.h (search_n): Delegate to specializations.
	(search_n(,,,,binary_predicate)): Likewise.
	(__search_n(forward_iterator_tag)): Original search_n, tweak to
	remove an unnecessary comparison.
	(__search_n(,,,,binary_predicate,forward_iterator_tag)): Likewise.

2005-09-12  Jim Xochellis  <jimxoch@yahoo.gr>

	* include/bits/stl_algo.h
	(__search_n(std::random_access_iterator_tag)): Add specialization.
	(__search_n(,,,,binary_predicate,std::random_access_iterator_tag)):
	Likewise.

2005-09-12  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/23417
	* include/bits/stl_list.h (_List_impl): Use member initialization
	list for -Weffc++.
	* include/bits/stl_tree.h (_Rb_tree_impl): Same.

2005-09-12  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/23767
	* include/bits/stl_iterator.h (__normal_iterator::